examples/test/testpolicy4852.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4852
  namespace: namespace421
spec:
  podSelector:
    matchLabels:
      key34: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value13
          key41: value32
          key43: value27
      podSelector:
        matchLabels:
          key32: value41
